# JSD-based-selection

./: LICENSE  README.md  pyproject.toml
examples/: example1_simple_gaussian.py  example2_pe_pipe_rul.py  example3_custom_model.py  example4_model_selection.py
jsd_consistency/: __init__.py  core.py  divergence.py  plot.py  selection.py
tests/: test_jsd_consistency.py  test_selection.py
