[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jsd-consistency"
version = "0.1.0"
description = "JSD-based predictive consistency metric for probabilistic models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["model selection", "Jensen-Shannon divergence", "consistency", "probabilistic models", "uncertainty quantification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/your-org/jsd-consistency"
"Bug Tracker" = "https://github.com/your-org/jsd-consistency/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jsd_consistency*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
